# ebms-adapter-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: manual_send.py
src/ebms_adapter_client/: __init__.py  client.py  config.py  exceptions.py  models.py
src/ebms_adapter_client/berichtenbox/: __init__.py  builder.py  parser.py
tests/: test_berichtenbox_builder.py  test_berichtenbox_parser.py  test_client.py
tests/fixtures/: berichten_verwerk_response_sample.xml
