[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebms-adapter-client"
version = "0.1.0"
description = "Python client for the ebms-core (eluinstra/ebms-core) REST API."
readme = "README.md"
license = "MIT"
authors = [{ name = "Worth Systems" }]
requires-python = ">=3.11"
keywords = ["ebms", "ebms-core", "berichtenbox", "notifynl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/Worth-NL/ebms-adapter-client"
Repository = "https://github.com/Worth-NL/ebms-adapter-client"
Issues = "https://github.com/Worth-NL/ebms-adapter-client/issues"
Changelog = "https://github.com/Worth-NL/ebms-adapter-client/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ebms_adapter_client = ["py.typed"]

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle
    "W",       # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
    "C4",      # flake8-comprehensions
    "S",       # flake8-bandit (security)
]

[tool.ruff.lint.per-file-ignores]
# Tests use plain `assert` (pytest idiom) and parse XML this package's own
# builder just generated (trusted, not untrusted external input).
"tests/**" = ["S101", "S106", "S314"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "respx>=0.21.1",
    "ruff>=0.11.4",
    "mypy>=1.13.0",
    "types-defusedxml>=0.7.0",
]
